[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiesta"
version = "1.0.0"
description = "Modern Discord API wrapper with hybrid commands and built-in interactions"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Fiesta Development Team", email = "dev@fiesta.py"}]
maintainers = [{name = "Fiesta Development Team", email = "dev@fiesta.py"}]
keywords = ["discord", "api", "bot", "async", "hybrid", "commands", "interactions"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Communications :: Chat",
]
requires-python = ">=3.8,<3.13"
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
voice = ["PyNaCl>=1.5.0"]
speed = ["orjson>=3.8.0", "aiodns>=3.0.0", "fastchardet>=0.2.0"]

[project.urls]
Homepage = "https://github.com/fiesta-py/fiesta"
Documentation = "https://fiesta-py.readthedocs.io/"
Repository = "https://github.com/fiesta-py/fiesta"
"Bug Tracker" = "https://github.com/fiesta-py/fiesta/issues"

[tool.setuptools.packages.find]
include = ["fiesta"]

[tool.setuptools.package-data]
fiesta = ["py.typed"]
